adding real todo: both api and portal
